--- a/src/boards/NucleoF446/CMakeLists.txt
+++ b/src/boards/NucleoF446/CMakeLists.txt
@@ -25,7 +25,7 @@ enable_language(ASM)
 
 list(APPEND ${PROJECT_NAME}_SOURCES
     "${CMAKE_CURRENT_SOURCE_DIR}/adc-board.c"
-    "${CMAKE_CURRENT_SOURCE_DIR}/board.c"
+    "${CMAKE_CURRENT_SOURCE_DIR}/board.cpp"
     "${CMAKE_CURRENT_SOURCE_DIR}/delay-board.c"
     # "${CMAKE_CURRENT_SOURCE_DIR}/eeprom-board.c"
     "${CMAKE_CURRENT_SOURCE_DIR}/gpio-board.c"
