--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,6 +62,12 @@
         // The following shields are supported:
         // SX1272MB2DAS, SX1276MB1LAS, SX1276MB1MAS, SX1261MBXBAS(Default), SX1262MBXCAS, SX1262MBXDAS, LR1110MB1XXS.
         "MBED_RADIO_SHIELD":"SX1261MBXBAS",
+        
+        // ZED enabled/disabled sensor true/false
+        "BME_68X": false,
+
+        // ZED enabled/disabled I2C sensor true/false
+        "TSL_2561": true,
 
         // Secure element type selection the following are supported
         // SOFT_SE(Default), LR1110_SE, ATECC608A_TNGLORA_SE
