--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -64,10 +64,10 @@
         "MBED_RADIO_SHIELD":"SX1261MBXBAS",
         
         // ZED enabled/disabled sensor true/false
-        "BME_68X": true,
+        "BME_68X": false,
 
         // ZED enabled/disabled I2C sensor true/false
-        "TSL_2561": true,
+        "TSL_2561": false,
 
         // Secure element type selection the following are supported
         // SOFT_SE(Default), LR1110_SE, ATECC608A_TNGLORA_SE
