Simplify TX and test ping pong

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -114,7 +114,8 @@
         "*.tcc": "cpp",
         "unordered_map": "cpp",
         "numeric": "cpp",
-        "ostream": "cpp"
+        "ostream": "cpp",
+        "fstream": "cpp"
     },
     "favorites.resources": [
         "src\\boards\\NucleoF446\\CMakeLists.txt",
