--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -67,7 +67,7 @@
         "BME_68X": true,
 
         // ZED enabled/disabled I2C sensor true/false
-        "TSL_2561": false,
+        "TSL_2561": true,
 
         // Secure element type selection the following are supported
         // SOFT_SE(Default), LR1110_SE, ATECC608A_TNGLORA_SE
