CMake glob fixed

--- a/src/peripherals/CMakeLists.txt
+++ b/src/peripherals/CMakeLists.txt
@@ -21,28 +21,25 @@ cmake_minimum_required(VERSION 3.6)
 #---------------------------------------------------------------------------------------
 # Target
 #---------------------------------------------------------------------------------------
-set(source_folders "*.cpp ")
+
+file (GLOB ${PROJECT_NAME}_SOURCES "*.cpp")
 
 if(BME_68X) 
-    file (GLOB files "path/to/files/*")
-
-    list(APPEND source_folders "bme68x/*.cpp ")
-    # file(GLOB ${PROJECT_NAME}_SOURCES "*.cpp" "bme68x/*.cpp")
+    file (GLOB BME_LIB "bme68x/*.cpp")
+    list(APPEND ${PROJECT_NAME}_SOURCES ${BME_LIB})
     message(STATUS "Added ZED bme68x I2C peripheral (C++)")
 else()
     message(STATUS "Did not add ZED bme68x I2C peripheral (C++)")    
 endif()
 
 if(TSL_2561)
-    file (GLOB files2 "path/to/files2*")
-    list (APPEND files ${files2})
-    list(APPEND source_folders "tsl2561/*.cpp ")
+    file (GLOB TSL_LIB "tsl2561/*.cpp")
+    list(APPEND ${PROJECT_NAME}_SOURCES ${TSL_LIB})
     message(STATUS "Added ZED tsl2561 I2C peripheral (C++)")
 else()
     message(STATUS "Did not add ZED tsl2561 I2C peripheral (C++)")
 endif()
 
-file(GLOB ${PROJECT_NAME}_SOURCES ${source_folders})
 add_library(${PROJECT_NAME} OBJECT EXCLUDE_FROM_ALL ${${PROJECT_NAME}_SOURCES})
 
 if(TSL_2561)
