--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,7 +56,7 @@
 
         // Target board, the following boards are supported:
         // NAMote72, NucleoL073, NucleoF446 (Default), NucleoL152, NucleoL476, SAMR34, SKiM880B, SKiM980A, SKiM881AXL, B-L072Z-LRWAN1.
-        "BOARD":"NucleoF446",
+        "BOARD":"NucleoWL55",
 
         // MBED Radio shield selection. (Applies only to Nucleo platforms)
         // The following shields are supported:
