--- a/src/boards/NucleoWL55/CMakeLists.txt
+++ b/src/boards/NucleoWL55/CMakeLists.txt
@@ -129,10 +129,12 @@ target_compile_definitions(${PROJECT_NAME} PUBLIC $<$<BOOL:${USE_RADIO_DEBUG}>:U
 
 target_include_directories(${PROJECT_NAME} PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}
+    ${CMAKE_CURRENT_SOURCE_DIR}/conf
     ${CMAKE_CURRENT_SOURCE_DIR}/../../targets/STM32WL/Drivers/STM32WLxx_HAL_Driver/Inc
     ${CMAKE_CURRENT_SOURCE_DIR}/../../targets/STM32WL/Drivers/CMSIS/Include
     ${CMAKE_CURRENT_SOURCE_DIR}/../../targets/STM32WL/Drivers/CMSIS/Device/ST/STM32WLxx/Include
     ${CMAKE_CURRENT_SOURCE_DIR}/../../targets/STM32WL/Drivers/BSP/STM32WLxx_Nucleo
+    ${CMAKE_CURRENT_SOURCE_DIR}/../../targets/STM32WL/Utilities/trace/adv_trace
 
     # ${CMAKE_CURRENT_SOURCE_DIR}/../stm32
     # ${CMAKE_CURRENT_SOURCE_DIR}/../stm32/cmsis
