--- a/src/apps/RFTest/CMakeLists.txt
+++ b/src/apps/RFTest/CMakeLists.txt
@@ -81,6 +81,9 @@ target_compile_definitions(${PROJECT_NAME} PUBLIC
 )
 
 target_include_directories(${PROJECT_NAME} PUBLIC
+    # Only for STM32WL55
+    ${CMAKE_CURRENT_SOURCE_DIR}/${BOARD}/conf
+
     $<BUILD_INTERFACE:$<TARGET_PROPERTY:system,INTERFACE_INCLUDE_DIRECTORIES>>
     $<BUILD_INTERFACE:$<TARGET_PROPERTY:radio,INTERFACE_INCLUDE_DIRECTORIES>>
     $<BUILD_INTERFACE:$<TARGET_PROPERTY:peripherals,INTERFACE_INCLUDE_DIRECTORIES>>
