Add dummy placeholder to peripherals lib, add flash task

--- a/src/apps/ping-pong/CMakeLists.txt
+++ b/src/apps/ping-pong/CMakeLists.txt
@@ -110,3 +110,16 @@ print_section_sizes(${PROJECT_NAME})
 # Create output in hex and binary format
 create_bin_output(${PROJECT_NAME})
 create_hex_output(${PROJECT_NAME})
+
+# Flash firmware to target.
+add_custom_target(flash
+  ${OPENOCD_BIN} -f interface/stlink.cfg -f target/stm32f4x.cfg 
+    -c "transport select hla_swd" 
+    -c "init" 
+    -c "reset halt" 
+    -c "flash write_image erase ${PROJECT_NAME}"
+    -c "flash verify_image ${PROJECT_NAME}"
+    -c "reset run" 
+    -c "shutdown"
+  DEPENDS ${PROJECT_NAME}
+  COMMENT "Flashing target hardware")
