--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,7 +55,7 @@
         "MODULATION":"LORA",
 
         // Target board, the following boards are supported:
-        // NAMote72, NucleoL073, NucleoF446 (Default), NucleoL152, NucleoL476, SAMR34, SKiM880B, SKiM980A, SKiM881AXL, B-L072Z-LRWAN1.
+        // NucleoF446 (Default), NucleoL476
         "BOARD":"NucleoF446",
 
         // MBED Radio shield selection. (Applies only to Nucleo platforms)
@@ -64,10 +64,10 @@
         "MBED_RADIO_SHIELD":"SX1261MBXBAS",
         
         // ZED enabled/disabled sensor true/false
-        "BME_68X": true,
+        "BME_68X": false,
 
         // ZED enabled/disabled I2C sensor true/false
-        "TSL_2561": true,
+        "TSL_2561": false,
 
         // Secure element type selection the following are supported
         // SOFT_SE(Default), LR1110_SE, ATECC608A_TNGLORA_SE
