--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,7 +9,7 @@
                 "cwd": "${workspaceFolder}"
             },
             "windows": {
-                "command": "${cwd}\\flash.bat"
+                "command": "${cwd}\\tools\\flash.bat"
             }
         }
     ]
