Debug the UART fifo

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -128,7 +128,8 @@
         "type_traits": "cpp",
         "utility": "cpp",
         "stm32f446xx.h": "c",
-        "timer.h": "c"
+        "timer.h": "c",
+        "cstddef": "cpp"
     },
     "favorites.resources": [
         "src\\boards\\NucleoF446\\CMakeLists.txt",
