--- a/cmake/launch.json.in
+++ b/cmake/launch.json.in
@@ -6,7 +6,8 @@
             "type": "python",
             "request": "launch",
             "program": "${workspaceFolder}/tools/GatewayController/main.py",
-            "console": "integratedTerminal"
+            "console": "integratedTerminal",
+            "cwd": "${workspaceFolder}/tools/GatewayController"
         },
         {
             "name": "Debug-@TARGET_NAME@",
