--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -216,6 +216,8 @@ add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/radio)
 
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/system)
 
+add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/protobuf)
+
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/mac)
 
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/peripherals)
