Start adding timed tasks based on RTC

--- a/cmake/launch.json.in
+++ b/cmake/launch.json.in
@@ -7,7 +7,8 @@
             "request": "launch",
             "program": "${workspaceFolder}/tools/GatewayController/main.py",
             "console": "integratedTerminal",
-            "cwd": "${workspaceFolder}/tools/GatewayController"
+            "cwd": "${workspaceFolder}/tools/GatewayController",
+            "python": "${workspaceFolder}/tools/GatewayController/venv/Scripts/python.exe"
         },
         {
             "name": "Debug-@TARGET_NAME@",
