Rework Radio PHY to allow gateway control of RAN

--- a/src/protobuf/CMakeLists.txt
+++ b/src/protobuf/CMakeLists.txt
@@ -4,8 +4,8 @@ cmake_minimum_required(VERSION 3.6)
 set(EMBEDDED_PROTO_SOURCE "${CMAKE_CURRENT_SOURCE_DIR}/../../EmbeddedProto/src")
 message("${EMBEDDED_PROTO_SOURCE}")
 list(APPEND ${PROJECT_NAME}_SOURCES
-    "${CMAKE_CURRENT_SOURCE_DIR}/UartReadBuffer.cpp"
-    "${CMAKE_CURRENT_SOURCE_DIR}/UartWriteBuffer.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/ProtoReadBuffer.cpp"
+    "${CMAKE_CURRENT_SOURCE_DIR}/ProtoWriteBuffer.cpp"
     "${EMBEDDED_PROTO_SOURCE}/Fields.cpp"
     "${EMBEDDED_PROTO_SOURCE}/MessageInterface.cpp"
     "${EMBEDDED_PROTO_SOURCE}/ReadBufferSection.cpp"
