Fix EEPROM emulation and flash related code

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -138,7 +138,8 @@
         "random": "cpp",
         "limits": "cpp",
         "streambuf": "cpp",
-        "initializer_list": "cpp"
+        "initializer_list": "cpp",
+        "eeprom_emul.h": "c"
     },
     "favorites.resources": [
         "src\\boards\\NucleoF446\\CMakeLists.txt",
