Unsuccessfully try to clear flash page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -140,7 +140,8 @@
         "streambuf": "cpp",
         "initializer_list": "cpp",
         "eeprom_emul.h": "c",
-        "eeprom-conf-reference.h": "c"
+        "eeprom-conf-reference.h": "c",
+        "nvmm.h": "c"
     },
     "favorites.resources": [
         "src\\boards\\NucleoF446\\CMakeLists.txt",
