Non volatile storage (#41)
* Update linker script and board .s file

* Store eeprom tryout

* Fix EEPROM emulation and flash related code

* Hack our way into flash ops

* Dont cycle variables to slots which are unfilled

* Completely rewrite flash page read write in a functional way

* Start working out memory layout better, discovered 128K sectors

* Write layout for nvmm measurement storage

* Unsuccessfully try to clear flash page

* Implement custom flash measurement storage API

* Revert rewrite functionality as flash does not support this, remove measurement count state in flash

* Add auto-disable when flash dirty after reset

* Add information about measurement storage to boot message

* Receive command to clear measurement storage

* Hmm serial filters not working properly

* Add easy way to probe USB STlink devices, disable send by default for gateway

* Add script to get 128k flash and convert to data plottable with matplotlib

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -138,7 +138,11 @@
         "random": "cpp",
         "limits": "cpp",
         "streambuf": "cpp",
-        "initializer_list": "cpp"
+        "initializer_list": "cpp",
+        "eeprom_emul.h": "c",
+        "eeprom-conf-reference.h": "c",
+        "nvmm.h": "c",
+        "algorithm": "cpp"
     },
     "favorites.resources": [
         "src\\boards\\NucleoF446\\CMakeLists.txt",
